<resources>
    <string name="app_name">Notes</string>
    <string name="title_activity_create_note">CreateNoteActivity</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle"> Note Subtitle</string>
    <string name="type_note_here"> Type note here… </string>
    <string name="my_notes"> My Notes</string>
    <string name="search_notes"> Search Notes</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="notes">Notes</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="bottom_sheet_behavior">BottomSheetBehavior</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_this_note">Are you sure you want to delete this note?</string>
</resources>